Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40410

Expanding dockArea does not get additional available space when using a fixed-size central widget

XMLWordPrintable

    • 2bfee10f3ab8e8e33b2169d735baedcdd9f2b584

      In provided example the resizing behaves like expected as long as the vertical splitter between the left dock widget and bottom dock widgets is not touched.
      After moving this vertical splitter, the bottom dock area does not get additional space by the enlarging the application.

      The resizing behaves also wrong, when the Dock2 and Dock3 widgets are docked to the top area.

      This is not duplicate to https://bugreports.qt-project.org/browse/QTBUG-38761 so please treat this as a separate bug.

      Fix proposal:
      If widgets in the central area have a fixed size, then the layout manager
      should spend all available space to the docking areas, that have docked
      widgets.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            tvete Paul Olav Tvete
            anylitok Antti Yli-Tokola (Inactive)
            Votes:
            1 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes